--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -150,6 +150,7 @@
         <Button
             android:layout_width="wrap_content"
             android:layout_gravity="center|bottom"
+            android:id="@+id/refresh"
             android:layout_height="wrap_content"
             android:text="refresh" />
     </LinearLayout>
