--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -143,7 +143,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="bottom"
-        android:paddingTop="200px"
+        android:paddingTop="400px"
         android:layout_gravity="bottom"
         android:orientation="vertical">
 
@@ -153,6 +153,18 @@
             android:id="@+id/refresh"
             android:layout_height="wrap_content"
             android:text="refresh" />
+        <TextView
+            android:padding="3dip"
+            android:paddingTop="50px"
+            android:gravity="center"
+            android:id="@+id/currentTime"
+            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:text="Current Time"
+            android:textColor="#000000"
+            android:textSize="100px"
+            android:textStyle="bold" />
     </LinearLayout>
+
     </LinearLayout>
 </android.support.constraint.ConstraintLayout>
